# taxi_demand_prediction

./: .gitignore  README.md  pyproject.toml
notebooks/: 05_visualize_training_data.ipynb  06_baseline_model.ipynb  06_xgboost_model.ipynb  07_lightgbm_model.ipynb  08_lightgbm_model_with_feature_engineering.ipynb  08_xgboost_model.ipynb  09_lightbm_with_hyperparameter_tuning.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightbm_with_hyperparameter_tuning.ipynb  10_lightgbm_model_with_feature_engineering.ipynb  code_explains.py  load_and_validate_raw_data.ipynb  transform_raw_data_to_features_targets.ipynb  transform_raw_data_to_ts_data.ipynb  transform_ts_into_features_and_targets.ipynb
src/: __init__.py  data.py  data_split.py  get_wrsc_data.py  model.py  paths.py  plot.py  test_debug.py
streamlit_apps/plotting_app/: plot_demo.py
